--- a/src/capstone_practice/CMakeLists.txt
+++ b/src/capstone_practice/CMakeLists.txt
@@ -21,3 +21,6 @@ target_link_libraries(capstone_practice_pub  ${catkin_LIBRARIES})
 
 add_executable(capstone_practice_sub src/capstone_practice_sub.cpp)
 target_link_libraries(capstone_practice_sub  ${catkin_LIBRARIES})
+
+add_executable(capstone_practice_sub2 src/capstone_practice_sub2.cpp)
+target_link_libraries(capstone_practice_sub2  ${catkin_LIBRARIES})
