--- a/src/capstone_LCH/CMakeLists.txt
+++ b/src/capstone_LCH/CMakeLists.txt
@@ -101,6 +101,12 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/capstone_LCH_node.cpp)
 
+add_executable(publisher src/publisher.cpp)
+target_link_libraries(publisher  ${catkin_LIBRARIES})
+add_executable(subscriber src/subscriber.cpp)
+target_link_libraries(subscriber  ${catkin_LIBRARIES})
+
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
