--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "string": "cpp",
-        "string_view": "cpp"
+      "*.html": "html",
+      "array": "cpp",
+      "string": "cpp",
+      "string_view": "cpp",
+      "deque": "cpp",
+      "vector": "cpp"
     }
 }
